src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/MissingResourceType/MissingResourceType.php
<?php

namespace Invalid\MissingResourceType;

use Claroline\CoreBundle\Library\Plugin\ClarolineExtension;

class MissingResourceType extends ClarolineExtension
{
}